src/test/ui/borrowck/borrowck-asm.stderr
error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/borrowck-asm.rs:31:32
   |
LL |         let y = &mut x;
   |                 ------ borrow of `x` occurs here
LL |         unsafe {
LL |             asm!("nop" : : "r"(x));
   |                                ^ use of borrowed `x`
LL |         }
LL |         let z = y;
   |                 - borrow later used here

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-asm.rs:39:31
   |
LL |         let x = 3;
   |             -
   |             |
   |             first assignment to `x`
   |             help: make this binding mutable: `mut x`
LL |         unsafe {
LL |             asm!("nop" : "=r"(x));
   |                               ^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/borrowck-asm.rs:53:31
   |
LL |         let x = 3;
   |             -
   |             |
   |             first assignment to `x`
   |             help: make this binding mutable: `mut x`
LL |         unsafe {
LL |             asm!("nop" : "+r"(x));
   |                               ^ cannot assign twice to immutable variable

error[E0381]: use of possibly-uninitialized variable: `x`
  --> $DIR/borrowck-asm.rs:60:32
   |
LL |             asm!("nop" : "=*r"(x));
   |                                ^ use of possibly-uninitialized `x`

error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/borrowck-asm.rs:68:31
   |
LL |         let y = &*x;
   |                 --- borrow of `x` occurs here
LL |         unsafe {
LL |             asm!("nop" : "+r"(x));
   |                               ^ assignment to borrowed `x` occurs here
LL |         }
LL |         let z = y;
   |                 - borrow later used here

error[E0499]: cannot borrow `*x` as mutable more than once at a time
  --> $DIR/borrowck-asm.rs:76:40
   |
LL |             asm!("nop" : : "r"(x), "r"(x) );
   |             ---------------------------^----
   |             |                  |       |
   |             |                  |       second mutable borrow occurs here
   |             |                  first mutable borrow occurs here
   |             first borrow later used here

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0381, E0384, E0499, E0503, E0506.
For more information about an error, try `rustc --explain E0381`.
